force-app/main/default/objects/SalesRecord__c/SalesRecord__c.object-meta.xml
<CustomObject>
    <description>Captures details of individual sales transactions, including the sale amount, transaction date, and the related customer account.</description>
    <label>SalesRecord</label>
    <nameField>
        <label>SalesRecord Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>