force-app/main/default/objects/SalesRecord__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup field that links to the customer account associated with this sales record</description>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SalesRecords</relationshipLabel>
    <relationshipName>SalesRecords</relationshipName>
    <type>Lookup</type>
</CustomField>