force-app/main/default/objects/SalesRecord__c/fields/SaleDate__c.field-meta.xml
<CustomField>
    <fullName>SaleDate__c</fullName>
    <description>The date when the purchase or sale transaction occurred.</description>
    <label>Sale Date</label>
    <type>Date</type>
</CustomField>